VideoDb: Add pagination to API
